@@ -63,7 +63,7 @@ pkgdata_DATA = Copyright.txt QuickStart.txt
 EXTRA_DIST = ChangeLog Copyright.txt INSTALL-mac.txt INSTALL-unix.txt \
 	INSTALL-vms.txt INSTALL-windows.txt TODO.txt index.html \
 	Magickshr.opt Make.com NEWS PLATFORMS.txt QuickStart.txt \
-	README.txt lndir.sh winpath.sh
+	README.txt lndir.sh version.sh winpath.sh
 
 # Non-Automake subdirectories to distribute
 DISTDIRS = guide images locale scenes scripts www PerlMagick
