@@ -16,6 +16,7 @@
 2003-02-27  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
+  <LI> Makefile.am (EXTRA_DIST): Forgot to distribute version.sh
   <LI> configure.ac: Use definitions from version.sh to drive
         package versioning and naming. These definitions support
         libtool's recommended approach to library versioning.
